refactor(order): limpa codigo removendo imports nao utilizados e variaveis soltas em OrderService